<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/title_appointment" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
            android:title="@string/title_order" />
        <item
            android:id="@+id/nav_remainder"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/title_remainder" />
        <item
            android:id="@+id/nav_medical_records"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/title_medical_records" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/title_log_out" />

    </group>



</menu>
