<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.harihara_medicals.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calender"
        android:name="com.example.harihara_medicals.ui.Calender.CalenderFragment"
        android:label="@string/title_calender"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/navigation_book_dr"
        android:name="com.example.harihara_medicals.ui.Book_Dr.BookdrFragment"
        android:label="@string/title_book_Dr"
        tools:layout="@layout/fragment_bookdr" />
    <fragment
        android:id="@+id/navigation_medicine"
        android:name="com.example.harihara_medicals.ui.productfragment2.ProductFragment2"
        android:label="@string/title_medicien"
        tools:layout="@layout/product_fragment2_fragment"/>
</navigation>