<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productfragment2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.productfragment2.ProductFragment2">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110sdp"
        android:background="#3377ff"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_search"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/edt_bg"
        android:padding="@dimen/_10sdp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/search_doctors"
        android:fontFamily="@font/montserrat_bold"
        android:drawableLeft="@drawable/ic_search_black_24dp"
        android:layout_marginTop="@dimen/_90sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/product_textview1"
        android:layout_below="@id/product_search"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/search_doctors"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="@dimen/_340sdp"
        android:layout_height="wrap_content"
        android:id="@+id/product_textview2"
        android:layout_below="@id/product_textview1"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/title_medicine_des"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>
    <RelativeLayout
        android:layout_below="@id/product_textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        >
    <Button
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_60sdp"
        android:text="@string/title_health"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/colorwhite"
        android:textStyle="bold"
        android:id="@+id/product_btn_health_wealth"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/btn_radius"/>
    <Button
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_60sdp"
        android:text="@string/title_cosmetics"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        android:textColor="@color/colorwhite"
        android:fontFamily="@font/montserrat_bold"
        android:id="@+id/product_btn_cosmetics"
        android:layout_toRightOf="@id/product_btn_health_wealth"
        android:layout_marginLeft="@dimen/_15sdp"
        android:background="@drawable/btn_radius"
        />
        <Button
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_60sdp"
            android:text="@string/title_medicine"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/colorwhite"
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/product_btn_Medicine"
            android:layout_below="@id/product_btn_health_wealth"
            android:background="@drawable/btn_radius"
            />
        <Button
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_60sdp"
            android:text="@string/title_surgical"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/colorwhite"
            android:id="@+id/product_btn_Surgical_item"
            android:layout_toRightOf="@id/product_btn_Medicine"
            android:layout_below="@id/product_btn_cosmetics"
            android:layout_marginLeft="@dimen/_15sdp"
            android:background="@drawable/btn_radius"
            />
        <Button
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_60sdp"
            android:text="@string/title_veterinary"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorwhite"
            android:fontFamily="@font/montserrat_bold"
            android:textStyle="bold"
            android:id="@+id/product_btn_veterinary"
            android:layout_below="@id/product_btn_Medicine"
            android:background="@drawable/btn_radius"
            />
        <Button
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_60sdp"
            android:text="@string/title_ayurveda"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorwhite"
            android:fontFamily="@font/montserrat_bold"
            android:id="@+id/product_btn_Ayrvedic"
            android:layout_toRightOf="@id/product_btn_veterinary"
            android:layout_below="@id/product_btn_Surgical_item"
            android:layout_marginLeft="@dimen/_15sdp"
            android:background="@drawable/btn_radius"
            />
    </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
