<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Medicine.orderconformation">

    <View
        android:layout_width="@dimen/_5sdp"
        android:layout_height="@dimen/_400sdp"
        android:background="#808080"
        android:layout_margin="@dimen/_50sdp"/>
    <TextView
        android:id="@+id/timeline1"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/timeline"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_margin="@dimen/_43sdp"
        android:fontFamily="@font/montserrat_bold"/>
    <TextView
        android:id="@+id/my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_orders"
        android:textSize="@dimen/_25sdp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_toRightOf="@id/timeline1"
        android:layout_marginTop="@dimen/_35sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20/01/2020"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_toRightOf="@id/timeline1"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_below="@id/my_order"
        />
    <TextView
        android:id="@+id/timeline2"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/_43sdp"
        android:layout_marginTop="@dimen/_240sdp"
        android:background="@drawable/timeline_white"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/timeline3"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/timeline"
        android:layout_marginTop="@dimen/_240sdp"
        android:layout_marginLeft="@dimen/_43sdp"
        android:fontFamily="@font/montserrat_bold"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/my_order_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_order_ready"
        android:textSize="@dimen/_25sdp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_toRightOf="@id/timeline1"
        android:layout_marginTop="@dimen/_230sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20/01/2020"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_toRightOf="@id/timeline1"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_below="@id/my_order_ready"
        />
    <TextView
        android:id="@+id/timeline4"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/_43sdp"
        android:layout_marginTop="@dimen/_440sdp"
        android:background="@drawable/timeline_white"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/timeline5"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/timeline"
        android:layout_marginTop="@dimen/_440sdp"
        android:layout_marginLeft="@dimen/_43sdp"
        android:fontFamily="@font/montserrat_bold"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/my_order_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_order_complete"
        android:textSize="@dimen/_25sdp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_toRightOf="@id/timeline1"
        android:layout_marginTop="@dimen/_430sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20/01/2020"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_toRightOf="@id/timeline1"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_below="@id/my_order_complete"
        />



</RelativeLayout>